Do not count memoization as a SufficientContexts violation by default

--- a/config/default.yml
+++ b/config/default.yml
@@ -23,6 +23,7 @@ RSpecParity/PublicMethodHasSpec:
 RSpecParity/SufficientContexts:
   Description: 'Ensures specs have at least as many contexts as the method has branches.'
   Enabled: true
+  IgnoreMemoization: true
   Include:
     - 'app/**/*.rb'
   Exclude:
